# anyproxy

./: .gitignore  .goreleaser.yml  BUILD.bazel  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
.github/workflows/: provenance.yaml  release.yaml  test.yaml
cmd/anyproxy/: BUILD.bazel  main.go  main_test.go
http-echo/: BUILD.bazel  http.go
socks-proxy/: BUILD.bazel  chain.go  host_translate.go  port_map.go  resolver.go  rewriter.go  socks.go
tools/: gopackagesdriver.sh
