load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "socks-proxy",
    srcs = [
        "chain.go",
        "host_translate.go",
        "port_map.go",
        "resolver.go",
        "rewriter.go",
        "socks.go",
    ],
    importpath = "github.com/juniorz/anyproxy/socks-proxy",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_things_go_go_socks5//:go-socks5",
        "@com_github_things_go_go_socks5//statute",
        "@org_golang_x_exp//rand",
    ],
)
