load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "anyproxy_lib",
    srcs = ["main.go"],
    importpath = "github.com/juniorz/anyproxy/cmd/anyproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//socks-proxy",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "anyproxy",
    embed = [":anyproxy_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "anyproxy_test",
    srcs = ["main_test.go"],
    embed = [":anyproxy_lib"],
)
